--- a/styles/page.css
+++ b/styles/page.css
@@ -50,7 +50,23 @@
         margin-bottom: 4.8rem;
 
         li {
-            color: var(--eccent-blue);
+            color: var(--accent-blue);
+        }
+    }
+
+    .destino_3 {
+        ul {
+            li:nth-of-type(1) {
+                color: var(--accent-purple);
+            }
+            
+            li:nth-of-type(2) {
+                color: var(--accent-pink);
+            }
+
+            li:nth-of-type(3) {
+                color: var(--accent-orange);
+            }
         }
     }
 }
