--- a/styles/page.css
+++ b/styles/page.css
@@ -59,7 +59,7 @@
             li:nth-of-type(1) {
                 color: var(--accent-purple);
             }
-            
+
             li:nth-of-type(2) {
                 color: var(--accent-pink);
             }
@@ -68,5 +68,9 @@
                 color: var(--accent-orange);
             }
         }
+    }
+
+    footer {
+        text-align: center;
     }
 }
